@@ -7,8 +7,8 @@ if False:  # MYPY
 
 _package_data = dict(
     full_package_name='ruamel.yaml',
-    version_info=(0, 15, 51),
-    __version__='0.15.51',
+    version_info=(0, 15, 52),
+    __version__='0.15.52',
     author='Anthon van der Neut',
     author_email='a.van.der.neut@ruamel.eu',
     description='ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order',  # NOQA
@@ -65,9 +65,9 @@ _package_data = dict(
     many_linux='libyaml-devel',
     supported=[(2, 7), (3, 4)],  # minimum
     tox=dict(
-        env=u'*pn',  # also test narrow 2.7.15
-        deps=u'ruamel.std.pathlib',
-        fl8excl=u'_test/lib',
+        env='*pn',  # also test narrow 2.7.15
+        deps='ruamel.std.pathlib',
+        fl8excl='_test/lib',
     ),
     rtfd='yaml',
 )  # type: Dict[Any, Any]
