@@ -1,3 +1,12 @@
+[0, 15, 52]: 2018-08-09
+  - added `.copy()` mapping representation for round-tripping
+    (``CommentedMap``) to fix incomplete copies of merged mappings
+    (reported by `Will Richards
+    <https://bitbucket.org/will_richards/>`__) 
+  - Also unmade that class a subclass of ordereddict to solve incorrect behaviour
+    for ``{**merged-mapping}`` and ``dict(**merged-mapping)`` (reported by
+    `Filip Matzner <https://bitbucket.org/FloopCZ/>`__)
+
 [0, 15, 51]: 2018-08-08
   - Fix method name dumps (were not dotted) and loads (reported by `Douglas Raillard 
     <https://bitbucket.org/DouglasRaillard/>`__)
